using-kubernates/order-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment-v1
spec:
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      containers:
        - name: order
          image: mianmahroz/order-service
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/podinfo
              name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 8080
      targetPort: 8080
